# garmin_mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml
config/: accounts.example.yaml
src/garmin_multi_mcp/: __init__.py  __main__.py  config.py  garmin_api.py  server.py  tools.py
src/garmin_multi_mcp/auth/: __init__.py  oidc.py  policy.py  protected_resource.py  runtime.py
tests/: conftest.py  test_auth_retry.py  test_bugfixes.py  test_p1_tools.py  test_p2_tools.py
