[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "garmin-multi-mcp"
version = "0.1.0"
description = "Multi-account Garmin MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "garminconnect==0.2.38",
    "mcp>=1.23.0",
    "matplotlib>=3.9",
    "PyYAML>=6.0.2",
    "python-dotenv==1.0.1",
    "requests==2.32.4",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
garmin-multi-mcp = "garmin_multi_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/garmin_multi_mcp"]
